--- a/package.json
+++ b/package.json
@@ -8,18 +8,26 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
     "lint": "eslint",
     "format": "prettier . --check"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.5.0",
+    "jsdom": "^27.3.0",
     "prettier": "3.6.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.47.0",
     "vite": "^7.2.6",
-    "vitest": "^4.0.10"
+    "vitest": "^4.0.16"
+  },
+  "dependencies": {
+    "path": "^0.12.7"
   }
 }
